--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -2,11 +2,15 @@
 
 <div *ngFor="let album of albums | async" class="panel panel-default">
   <div class="panel-body">
-    <h3 (click)="goToDetailPage(album)"><em>{{album.title}}</em> by {{album.artist}}</h3>
+    <h3 (click)="goToDetailPage(album)"><em>"{{album.title}}"</em> by {{album.artist}} </h3>
     <div *ngIf="currentRoute === '/admin'">
       {{album.description}}
+      <button (click)="openUpdateForm(album)">Edit</button>
+
       <hr>
-      <app-edit-album [selectedAlbum]="album"></app-edit-album>
+      <div *ngIf="selectedAlbum != null">
+        <app-edit-album [selectedAlbum]="album"></app-edit-album>
+      </div>
     </div>
   </div>
 </div>
